Fixed PlaceWorker directions and visibility

--- a/src/main/resources/style.css
+++ b/src/main/resources/style.css
@@ -224,32 +224,3 @@
 #godName{
     -fx-font-size: 19pt;
 }
-
-#freeTile{
-    -fx-color: #d6ce1b;
-    -fx-border-color: #d69600;
-    -fx-opacity: 0.5;
-}
-
-#freeTile:hover{
-    -fx-color: #d6ce1b;
-    -fx-border-color: #d69600;
-    -fx-opacity: 0.75;
-}
-
-#freeTile:selected{
-    -fx-color: #d6ce1b;
-    -fx-border-color: #d69600;
-    -fx-opacity: 0;
-}
-
-#freeTile:disabled{
-    -fx-color: #d6ce1b;
-    -fx-border-color: #d69600;
-    -fx-opacity: 1;
-}
-
-.StackPane{
-    -fx-background-color: #d6ce1b;
-    -fx-border-color: #d69600;
-}
